# project_starter

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  mobile-development.md  start.sh  template-optimization-summary.md
.claude/: plan.md
.github/workflows/: test-backend.yml
backend/: Dockerfile  pyproject.toml
backend/app/: crud.py  models.py
backend/app/api/: main.py
backend/app/api/routes/: auth.py
backend/app/core/: celery_app.py  config.py
backend/app/services/: sms.py  wechat.py
backend/app/services/ai/llm/: llm_service.py
backend/app/services/ai/ocr/: ocr_service.py
backend/app/services/ai/rag/: document_loader.py  vector_store.py
backend/app/tasks/: __init__.py  email.py  maintenance.py
frontend/: .env.example  Dockerfile  README.md  capacitor.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: README.md
frontend/src/config/: api.ts
frontend/src/hooks/: useAuth.ts
frontend/src/pages/auth/: BindPhonePage.css  BindPhonePage.tsx  LoginPage.css  LoginPage.tsx  PhoneLoginPage.css  PhoneLoginPage.tsx  RegisterPage.tsx  WechatCallbackPage.css  WechatCallbackPage.tsx
frontend/src/pages/home/: HomePage.css  HomePage.tsx
frontend/src/services/: authService.ts
frontend/src/stores/: authStore.ts
frontend/src/theme/: variables.css
scripts/: test-local.sh
