[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "python-multipart<1.0.0,>=0.0.7",
    "email-validator<3.0.0.0,>=2.1.0.post1",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "tenacity<9.0.0,>=8.2.3",
    "pydantic>2.0",
    "emails<1.0,>=0.6",
    "jinja2<4.0.0,>=3.1.4",
    "alembic<2.0.0,>=1.12.1",
    "httpx<1.0.0,>=0.25.1",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "sqlmodel<1.0.0,>=0.0.21",
    # Pin bcrypt until passlib supports the latest
    "bcrypt==4.3.0",
    "pydantic-settings<3.0.0,>=2.2.1",
    "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
    "pyjwt<3.0.0,>=2.8.0",
    # Celery and Redis
    "celery[redis]>=5.3.0,<6.0.0",
    "redis>=5.0.0,<6.0.0",
]

# 可选依赖组 - 按需安装
# 安装方式:
#   基础版: uv sync
#   AI 版: uv sync --extra ai
#   OCR 版: uv sync --extra ocr
#   全功能: uv sync --extra ai --extra ocr
[project.optional-dependencies]
ai = [
    # AI/LLM dependencies
    "langchain>=0.1.0,<1.0.0",
    "langchain-openai>=0.0.5,<1.0.0",
    "langchain-anthropic>=0.1.0,<1.0.0",
    "langchain-community>=0.0.20,<1.0.0",
    # Vector database
    "qdrant-client>=1.7.0,<2.0.0",
    # Embeddings
    "sentence-transformers>=2.2.0,<3.0.0",
]
ocr = [
    # OCR dependencies
    "pytesseract>=0.3.10,<1.0.0",
    "pillow>=10.0.0,<11.0.0",
    "pdf2image>=1.16.3,<2.0.0",
]
doc = [
    # Document processing
    "pypdf>=3.17.0,<7.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "python-pptx>=0.6.23,<1.0.0",
]
all = [
    # 安装所有可选依赖
    "app[ai,ocr,doc]",
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
